--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
+    "start": "node app.js"
   },
   "dependencies": {
     "compression": "^1.7.4",
